force-app/main/default/objects/Postal_Area__c/Postal_Area__c.object-meta.xml
<CustomObject>
    <label>Postal Area</label>
    <nameField>
        <label>Postal Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>