force-app/main/default/objects/Postal_Area__c/fields/Sub_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region_Code__c</fullName>
    <label>Sub-Region Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>