force-app/main/default/objects/Postal_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Sub_Region_Code__c</columns>
    <columns>Sub_Region__c</columns>
    <columns>Municipality_Code__c</columns>
    <columns>Municipality__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Area__c</columns>
    <columns>Profit_Center__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>